Alignment issue in rollcage flow

--- a/src/assets/css/splitPPS.less
+++ b/src/assets/css/splitPPS.less
@@ -7,7 +7,8 @@
     margin:auto;
     padding: 12px;
 
-  
+  .mapCont{
+    text-align:center;
     
 	.col1{
 		display: inline-block;
@@ -184,6 +185,7 @@
 	ul{
 		list-style:none;
 	}
+  }	
 }
 @-webkit-keyframes undockLeft {
     from {right: 0px;}
